--- a/frontend/src/i18n/locales/en/menu.json
+++ b/frontend/src/i18n/locales/en/menu.json
@@ -9,8 +9,10 @@
   "profile": "Profile",
   "notifications": "Notifications",
   "approve-requests": "Approve Requests",
+  "team-management": "Team Management",
   "department-attendance": "Department Attendance",
   "attendance-analytics": "Attendance Analytics",
+  "reports": "Reports",
   "admin-attendance": "Admin Attendance",
   "performance-review": "Performance Review",
   "shifts": "Shift Management",
